@@ -1,3 +1,8 @@
+2009-06-22  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* libtiff/tif_lzw.c: Fix buffer underflow bug. 
+	http://bugzilla.maptools.org/show_bug.cgi?id=2065
+
 2009-06-21  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* configure.ac, libtiff/tif_jpeg.c, libtiff/tif_jpeg_12.c: add support
